--- a/JuanAraujoB_ExamenProgreso2/AppShell.xaml
+++ b/JuanAraujoB_ExamenProgreso2/AppShell.xaml
@@ -16,5 +16,12 @@
         Title="Acerca de"
         ContentTemplate="{DataTemplate views:AboutPage}"
         Icon="{OnPlatform 'icon_about.png', iOS='icon_about_ios.png', MacCatalyst='icon_about_ios.png'}" />
+
+        <ShellContent
+        Title="Conteo de palabras"
+        ContentTemplate="{DataTemplate views:JA_Conteo}"
+        Icon="{OnPlatform 'icon_about.png', iOS='icon_about_ios.png', MacCatalyst='icon_about_ios.png'}" />
+
+
     </FlyoutItem>
 </Shell>
